build/log/idf_py_stdout_output_1144
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\dev\GitHub\BTInsulinpumpSW\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/dev/GitHub/BTInsulinpumpSW/build/bootloader/bootloader.bin"
Bootloader binary size 0x51f0 bytes. 0x2e10 bytes (36%) free.
[2/7] Building C object esp-idf/buzzer/CMakeFiles/__idf_buzzer.dir/buzzer.c.obj
FAILED: esp-idf/buzzer/CMakeFiles/__idf_buzzer.dir/buzzer.c.obj 
ccache C:\Espressif\tools\xtensa-esp32s3-elf\esp-12.2.0_20230208\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/dev/GitHub/BTInsulinpumpSW/build/config -IC:/dev/GitHub/BTInsulinpumpSW/components/buzzer/include -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32s3 -IC:/esp/esp-idf/components/soc/esp32s3/include -IC:/esp/esp-idf/components/hal/esp32s3/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/include/esp32s3 -IC:/esp/esp-idf/components/esp_rom/esp32s3 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/esp32s3/include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/dev/GitHub/BTInsulinpumpSW/components/battery/include -IC:/esp/esp-idf/components/driver/include -IC:/esp/esp-idf/components/driver/deprecated -IC:/esp/esp-idf/components/driver/analog_comparator/include -IC:/esp/esp-idf/components/driver/dac/include -IC:/esp/esp-idf/components/driver/gpio/include -IC:/esp/esp-idf/components/driver/gptimer/include -IC:/esp/esp-idf/components/driver/i2c/include -IC:/esp/esp-idf/components/driver/i2s/include -IC:/esp/esp-idf/components/driver/ledc/include -IC:/esp/esp-idf/components/driver/mcpwm/include -IC:/esp/esp-idf/components/driver/parlio/include -IC:/esp/esp-idf/components/driver/pcnt/include -IC:/esp/esp-idf/components/driver/rmt/include -IC:/esp/esp-idf/components/driver/sdio_slave/include -IC:/esp/esp-idf/components/driver/sdmmc/include -IC:/esp/esp-idf/components/driver/sigma_delta/include -IC:/esp/esp-idf/components/driver/spi/include -IC:/esp/esp-idf/components/driver/temperature_sensor/include -IC:/esp/esp-idf/components/driver/touch_sensor/include -IC:/esp/esp-idf/components/driver/twai/include -IC:/esp/esp-idf/components/driver/uart/include -IC:/esp/esp-idf/components/driver/usb_serial_jtag/include -IC:/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/esp/esp-idf/components/esp_pm/include -IC:/esp/esp-idf/components/esp_ringbuf/include -IC:/esp/esp-idf/components/esp_adc/include -IC:/esp/esp-idf/components/esp_adc/interface -IC:/esp/esp-idf/components/esp_adc/esp32s3/include -IC:/esp/esp-idf/components/esp_adc/deprecated/include -IC:/dev/GitHub/BTInsulinpumpSW/components/leds/include -IC:/dev/GitHub/BTInsulinpumpSW/components/motor/include -IC:/esp/esp-idf/components/nvs_flash/include -IC:/esp/esp-idf/components/spi_flash/include -IC:/esp/esp-idf/components/esp_partition/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/dev/GitHub/BTInsulinpumpSW=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/buzzer/CMakeFiles/__idf_buzzer.dir/buzzer.c.obj -MF esp-idf\buzzer\CMakeFiles\__idf_buzzer.dir\buzzer.c.obj.d -o esp-idf/buzzer/CMakeFiles/__idf_buzzer.dir/buzzer.c.obj -c C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c: In function 'BUZZER_init':
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:52:29: error: 'LEDC_MODE' undeclared (first use in this function)
   52 |         .speed_mode       = LEDC_MODE,
      |                             ^~~~~~~~~
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:52:29: note: each undeclared identifier is reported only once for each function it appears in
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:53:29: error: 'LEDC_TIMER' undeclared (first use in this function); did you mean 'LEDC_TIMER_3'?
   53 |         .timer_num        = LEDC_TIMER,
      |                             ^~~~~~~~~~
      |                             LEDC_TIMER_3
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:54:29: error: 'LEDC_DUTY_RES' undeclared (first use in this function)
   54 |         .duty_resolution  = LEDC_DUTY_RES,
      |                             ^~~~~~~~~~~~~
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:55:29: error: 'LEDC_FREQUENCY' undeclared (first use in this function)
   55 |         .freq_hz          = LEDC_FREQUENCY,  // Set output frequency at 5 kHz
      |                             ^~~~~~~~~~~~~~
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:63:27: error: 'LEDC_CHANNEL' undeclared (first use in this function); did you mean 'LEDC_CHANNEL_7'?
   63 |         .channel        = LEDC_CHANNEL,
      |                           ^~~~~~~~~~~~
      |                           LEDC_CHANNEL_7
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:66:27: error: 'LEDC_OUTPUT_IO' undeclared (first use in this function)
   66 |         .gpio_num       = LEDC_OUTPUT_IO,
      |                           ^~~~~~~~~~~~~~
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c: In function 'task_BUZZER_annoyingBuzzer':
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:86:21: error: 'LEDC_MODE' undeclared (first use in this function)
   86 |       ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                     ^~~~~~~~~
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:86:32: error: 'LEDC_CHANNEL' undeclared (first use in this function); did you mean 'LEDC_CHANNEL_7'?
   86 |       ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                                ^~~~~~~~~~~~
      |                                LEDC_CHANNEL_7
C:/dev/GitHub/BTInsulinpumpSW/components/buzzer/buzzer.c:86:46: error: 'LEDC_DUTY' undeclared (first use in this function)
   86 |       ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                                              ^~~~~~~~~
ninja: build stopped: subcommand failed.
